<resources>
    <string name="app_name">Expense Tracker App</string>

    <!-- Sign In Activity Texts -->
    <string name="app_subtitle">Track your spending, master your finances</string>
    <string name="email">Email</string>
    <string name="email_hint">Enter your valid email</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter your password</string>
    <string name="sign_in_button_txt">Sign In</string>
    <string name="do_not_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>

    <!-- Sign Up Activity Texts -->
    <string name="name">Name</string>
    <string name="name_hint">Enter your full name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_hint">Re-type your password</string>
    <string name="sign_up_button_txt">Sign Up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>

    <!-- Bottom Navigation Menu Items-->
    <string name="home_menu">Home</string>
    <string name="add_menu">Add</string>
    <string name="history_menu">History</string>
    <string name="insights_menu">Insights</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>