<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="20dp">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:src="@drawable/app_logo"
                tools:ignore="ContentDescription" />

            <Space
                android:layout_width="0dp"
                android:layout_height="12dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="16sp"
                android:textAlignment="center"
                android:textStyle="bold"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_subtitle"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textStyle="normal"
                android:textColor="@color/grey"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="32dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textAlignment="textStart"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="8dp"/>

                <EditText
                    android:id="@+id/sign_up_name_field_id"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingHorizontal="12dp"
                    android:hint="@string/name_hint"
                    android:importantForAutofill="no"
                    android:background="@drawable/edit_text_background"
                    android:inputType="text"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAlignment="textStart"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="8dp"/>

                <EditText
                    android:id="@+id/sign_up_email_field_id"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingHorizontal="12dp"
                    android:hint="@string/email_hint"
                    android:importantForAutofill="no"
                    android:background="@drawable/edit_text_background"
                    android:inputType="textEmailAddress"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAlignment="textStart"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="8dp"/>

                <EditText
                    android:id="@+id/sign_up_password_field_id"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingHorizontal="12dp"
                    android:hint="@string/password_hint"
                    android:importantForAutofill="no"
                    android:background="@drawable/edit_text_background"
                    android:inputType="textPassword"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_password"
                    android:textAlignment="textStart"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="8dp"/>

                <EditText
                    android:id="@+id/sign_up_confirm_password_field_id"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingHorizontal="12dp"
                    android:hint="@string/confirm_password_hint"
                    android:importantForAutofill="no"
                    android:background="@drawable/edit_text_background"
                    android:inputType="textPassword"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="24dp"/>

                <Button
                    android:id="@+id/sign_up_button_id"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/sign_up_button_txt"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:background="@drawable/primary_button_background"
                    app:backgroundTint="@null"/>

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_account"
                    android:textColor="@color/grey"
                    android:textSize="14sp"
                    android:layout_marginEnd="12dp"/>

                <TextView
                    android:id="@+id/sign_in_text_button_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:focusable="true"/>

            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="40dp"/>

        </LinearLayout>

</ScrollView>