<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="20dp"
    android:paddingHorizontal="20dp"
    tools:context=".SignInActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/app_logo"
        tools:ignore="ContentDescription" />

    <Space
        android:layout_width="0dp"
        android:layout_height="12dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textStyle="bold"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_subtitle"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textStyle="normal"
        android:textColor="@color/grey"/>

    <Space
        android:layout_width="0dp"
        android:layout_height="32dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textAlignment="textStart"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="8dp"/>

        <EditText
            android:id="@+id/sign_in_email_field"
            android:layout_width="match_parent"
            android:paddingHorizontal="12dp"
            android:layout_height="48dp"
            android:hint="@string/email_hint"
            android:importantForAutofill="no"
            android:background="@drawable/edit_text_background"
            android:inputType="textEmailAddress"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textAlignment="textStart"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="8dp"/>

        <EditText
            android:id="@+id/sign_in_password_field"
            android:layout_width="match_parent"
            android:paddingHorizontal="12dp"
            android:layout_height="48dp"
            android:hint="@string/password_hint"
            android:importantForAutofill="no"
            android:background="@drawable/edit_text_background"
            android:inputType="textVisiblePassword"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/remember_me"
                android:layout_width="24dp"
                android:layout_height="24dp"/>

            <Space
                android:layout_width="8dp"
                android:layout_height="0dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:textAlignment="textStart"/>

            <Space
                android:layout_width="128dp"
                android:layout_height="0dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:clickable="true"
                android:focusable="true"
                android:textAlignment="textStart"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>